# comments-tree

./: Pipfile  README.md  bootstrap.sh
backend/: MANIFEST.in  README.rst  requirements.txt  setup.cfg
backend/api/: __init__.py  auth.py  exceptions.py  post.py  schema.sql
backend/api/form/: post.py  user.py
backend/tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_post.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/config/: dev.env.js  index.js
frontend/src/: App.vue  main.js
frontend/src/assets/: style.css
frontend/src/components/: InvalidMessage.vue  Navbar.vue  Post.vue  TreeFolder.vue  TreeFolderContents.vue
frontend/src/pages/auth/: Login.vue  Register.vue
frontend/src/pages/post/: CreatePost.vue  PostList.vue  ReplyPost.vue  UpdatePost.vue
frontend/src/router/: index.js
frontend/src/services/: auth.js  axios.js  post.js
frontend/src/store/: index.js
