[metadata]
name = comments-tree
version = 1.0.0
url = https://github.com/recruitment-cn/recruitment-dev-python-backend-comments-tree-homework-YiguoWang
license = BSD-3-Clause
maintainer = Eguo Wang
maintainer_email = wangeguo@gmail.com
description = The basic comments tree restful web service.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    api
